# handcrafted-persona-engine-Soma

./: .gitignore  INSTALLATION.md  Live2D.md  README.md  personality_example.txt
src/PersonaEngine/: PersonaEngine.sln
src/PersonaEngine/PersonaEngine.App/: GuidToEmojiEnricher.cs  PersonaEngine.App.csproj  Program.cs  appsettings.json
src/PersonaEngine/PersonaEngine.Lib/: EmbeddedResource.cs  PersonaEngine.Lib.csproj  ServiceCollectionExtensions.cs
src/PersonaEngine/PersonaEngine.Lib/Audio/: AsyncAutoResetEvent.cs  AudioConverter.cs  (+22 more)
src/PersonaEngine/PersonaEngine.Lib/Rust/: Cargo.toml  build.rs
src/PersonaEngine/PersonaEngine.Lib/Rust/bindings/: rust_lib.cs  rust_lib.py
src/PersonaEngine/PersonaEngine.Lib/Rust/src/: lib.rs  rust-lib.udl
talking-head-anime-4-soma-main/: LICENSE
talking-head-anime-4-soma-main/distiller-ui-doc/: index.html
talking-head-anime-4-soma-main/distiller-ui-doc/params/: body_morpher_batch_size.html  body_morpher_random_seed_0.html  body_morpher_random_seed_1.html  character_image_file_name.html  face_mask_image_file_name.html  face_morpher_batch_size.html  face_morpher_random_seed_0.html  face_morpher_random_seed_1.html  num_cpu_workers.html  num_gpus.html  num_training_examples_per_sample_output.html  prefix.html
talking-head-anime-4-soma-main/docs/: character_model_ifacialmocap_puppeteer.md  character_model_manual_poser.md  character_model_mediapipe_puppeteer.md  distill.md  distiller_ui.md  full_manual_poser.md
talking-head-anime-4-soma-main/poetry/: pyproject.toml
talking-head-anime-4-soma-main/src/tha4/: image_util.py
(+455 files in other folders)
